<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:paddingTop="125dp"
    android:paddingHorizontal="50dp"
    tools:context=".ui.view_GuestLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="219dp"
            android:layout_height="206dp"
            android:src="@drawable/codelingo_logo"
            android:contentDescription="CodeLingo Logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:paddingTop="5dp"
            android:paddingBottom="35dp"
            android:textSize="60dp"
            android:gravity="center"
            android:ems="10"
            android:textStyle="bold"
            android:text="CodeLingo" />

        <EditText
            android:id="@+id/un_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="#37963FB5"
            android:hint="@string/username"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="30sp" />

        <CheckBox
            android:id="@+id/stay_logged_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:paddingStart="7dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/stay_signed_in"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <Button
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:onClick="btnLoginOnClick"
            android:text="@string/sign_in"
            android:textSize="30dp" />

    </LinearLayout>

</RelativeLayout>