<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <Button
        android:id="@+id/true_button"
        android:layout_width="387dp"
        android:layout_height="121dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="100dp"
        android:text="@string/True"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/false_button"
        android:layout_width="387dp"
        android:layout_height="121dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="100dp"
        android:text="@string/False"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="450dp"
        android:text="@string/hello_blank_fragment"
        android:textColor="@color/_bg__surface_pro_8___1_ek2_color"
        android:textSize="24sp"
        android:translationZ="-1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prompt_text"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/prompt_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="400dp"
        android:text="@string/hello_blank_fragment"
        android:textAlignment="center"
        android:textColor="@color/_bg__surface_pro_8___1_ek2_color"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>