<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		surface_pro_8___1
	 *	@date 		Wednesday 07th of February 2024 06:38:24 PM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/surface_pro_8___1" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_surface_pro_8___1_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__surface_pro_8___1_ek2"
					android:background="@drawable/_bg__surface_pro_8___1_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="1280dp"
					android:layout_height="800dp" />

				<View   android:id="@+id/window"
					android:background="@drawable/window_shape"
					 android:layout_marginStart="-1dp"
					android:layout_marginTop="-1dp"
					android:layout_width="1280dp"
					android:layout_height="800dp" />

				<View   android:id="@+id/navbar"
					android:background="@drawable/navbar_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="1280dp"
					android:layout_height="90dp" />

				<ImageView android:id="@+id/codelingo_logo_1"
					android:src="@drawable/codelingo_logo_1"
					android:contentDescription="codelingo_logo_1"
					 android:layout_marginStart="491dp"
					android:layout_marginTop="9dp"
					android:layout_width="74dp"
					android:layout_height="81dp" />

				<TextView android:id="@+id/codelingo"
					android:textSize="40sp"
					android:textColor="@color/_bg__surface_pro_8___1_ek2_color"
					android:layout_marginLeft="576dp"
					android:layout_marginTop="20dp"
					android:layout_width="205dp"
					android:layout_height="59dp"
					android:text="@string/codelingo_string"
					 />

				<ImageView android:id="@+id/outer_box"
					android:src="@drawable/outer_box"
					android:contentDescription="outer_box"
					 android:layout_marginStart="62dp"
					android:layout_marginTop="203dp"
					android:layout_width="1145dp"
					android:layout_height="557dp" />

				<View   android:id="@+id/rectangle_1"
					android:background="@drawable/rectangle_1_shape"
					 android:alpha="0.5"
					 android:layout_marginStart="612dp"
					android:layout_marginTop="235dp"
					android:layout_width="265dp"
					android:layout_height="228dp" />

				<View   android:id="@+id/innerrect1"
					android:background="@drawable/innerrect1_shape"
					 android:layout_marginStart="625dp"
					android:layout_marginTop="248dp"
					android:layout_width="240dp"
					android:layout_height="152dp" />

				<View   android:id="@+id/innerrect1_ek1"
					android:background="@drawable/innerrect1_ek1_shape"
					 android:layout_marginStart="926dp"
					android:layout_marginTop="502dp"
					android:layout_width="240dp"
					android:layout_height="152dp" />

				<View   android:id="@+id/innerrect1_ek2"
					android:background="@drawable/innerrect1_ek2_shape"
					 android:layout_marginStart="625dp"
					android:layout_marginTop="502dp"
					android:layout_width="240dp"
					android:layout_height="152dp" />

				<View   android:id="@+id/innerrect1_ek3"
					android:background="@drawable/innerrect1_ek3_shape"
					 android:layout_marginStart="925dp"
					android:layout_marginTop="248dp"
					android:layout_width="240dp"
					android:layout_height="152dp" />

				<View   android:id="@+id/rectangle_2"
					android:background="@drawable/rectangle_2_shape"
					 android:alpha="0.5"
					 android:layout_marginStart="912dp"
					android:layout_marginTop="235dp"
					android:layout_width="265dp"
					android:layout_height="228dp" />

				<ImageView android:id="@+id/design2"
					android:src="@drawable/design2"
					android:contentDescription="design2"
					 android:layout_marginStart="911dp"
					android:layout_marginTop="248dp"
					android:layout_width="254dp"
					android:layout_height="152dp" />

				<View   android:id="@+id/rectangle_3"
					android:background="@drawable/rectangle_3_shape"
					 android:alpha="0.5"
					 android:layout_marginStart="612dp"
					android:layout_marginTop="487dp"
					android:layout_width="265dp"
					android:layout_height="228dp" />

				<ImageView android:id="@+id/design3"
					android:src="@drawable/design3"
					android:contentDescription="design3"
					 android:layout_marginStart="625dp"
					android:layout_marginTop="505dp"
					android:layout_width="226dp"
					android:layout_height="146dp" />

				<View   android:id="@+id/rectangle_4"
					android:background="@drawable/rectangle_4_shape"
					 android:alpha="0.5"
					 android:layout_marginStart="912dp"
					android:layout_marginTop="487dp"
					android:layout_width="265dp"
					android:layout_height="228dp" />

				<ImageView android:id="@+id/design4"
					android:src="@drawable/design4"
					android:contentDescription="design4"
					 android:layout_marginStart="925dp"
					android:layout_marginTop="509dp"
					android:layout_width="227dp"
					android:layout_height="145dp" />

				<TextView android:id="@+id/placeholder_course"
					android:textSize="40sp"
					android:textColor="@color/_bg__surface_pro_8___1_ek2_color"
					android:layout_marginLeft="107dp"
					android:layout_marginTop="145dp"
					android:layout_width="521dp"
					android:layout_height="56dp"
					android:text="@string/placeholder_course_string"
					 />

				<ImageView android:id="@+id/line_1"
					android:src="@drawable/line_1"
					android:contentDescription="line_1"
					 android:layout_marginStart="326dp"
					android:layout_marginTop="247dp"
					android:layout_width="477dp"
					android:layout_height="477dp" />

				<ImageView android:id="@+id/untitled_design__7__1"
					android:src="@drawable/untitled_design__7__1"
					android:contentDescription="untitled_design__7__1"
					 android:layout_marginStart="640dp"
					android:layout_marginTop="248dp"
					android:layout_width="211dp"
					android:layout_height="152dp" />

				<TextView android:id="@+id/ex_1"
					android:textSize="25sp"
					android:textColor="@color/_bg__surface_pro_8___1_ek2_color"
					android:layout_marginLeft="640dp"
					android:layout_marginTop="424dp"
					android:layout_width="68.5dp"
					android:layout_height="31.5dp"
					android:text="@string/ex_1_string"
					 />

				<TextView android:id="@+id/ex_4"
					android:textSize="25sp"
					android:textColor="@color/_bg__surface_pro_8___1_ek2_color"
					android:layout_marginLeft="939dp"
					android:layout_marginTop="678dp"
					android:layout_width="74.5dp"
					android:layout_height="31.5dp"
					android:text="@string/ex_4_string"
					 />

				<TextView android:id="@+id/ex_3"
					android:textSize="25sp"
					android:textColor="@color/_bg__surface_pro_8___1_ek2_color"
					android:layout_marginLeft="640dp"
					android:layout_marginTop="678dp"
					android:layout_width="75.5dp"
					android:layout_height="31.5dp"
					android:text="@string/ex_3_string"
					 />

				<TextView android:id="@+id/ex_2"
					android:textSize="25sp"
					android:textColor="@color/_bg__surface_pro_8___1_ek2_color"
					android:layout_marginLeft="939dp"
					android:layout_marginTop="424dp"
					android:layout_width="76.5dp"
					android:layout_height="31.5dp"
					android:text="@string/ex_2_string"
					 />

				<ImageView android:id="@+id/star_1"
					android:src="@drawable/star_1"
					android:contentDescription="star_1"
					 android:layout_marginStart="702dp"
					android:layout_marginTop="418dp"
					android:layout_width="25.68dp"
					android:layout_height="24.42dp" />

				<ImageView android:id="@+id/star_2"
					android:src="@drawable/star_2"
					android:contentDescription="star_2"
					 android:layout_marginStart="729dp"
					android:layout_marginTop="418dp"
					android:layout_width="25.68dp"
					android:layout_height="24.42dp" />

				<ImageView android:id="@+id/star_5"
					android:src="@drawable/star_5"
					android:contentDescription="star_5"
					 android:layout_marginStart="810dp"
					android:layout_marginTop="418dp"
					android:layout_width="25.68dp"
					android:layout_height="24.42dp" />

				<ImageView android:id="@+id/star_4"
					android:src="@drawable/star_4"
					android:contentDescription="star_4"
					 android:layout_marginStart="783dp"
					android:layout_marginTop="418dp"
					android:layout_width="25.68dp"
					android:layout_height="24.42dp" />

				<ImageView android:id="@+id/star_3"
					android:src="@drawable/star_3"
					android:contentDescription="star_3"
					 android:layout_marginStart="756dp"
					android:layout_marginTop="418dp"
					android:layout_width="25.68dp"
					android:layout_height="24.42dp" />

				<ImageView android:id="@+id/star_16"
					android:src="@drawable/star_16"
					android:contentDescription="star_16"
					 android:layout_marginStart="1037dp"
					android:layout_marginTop="672dp"
					android:layout_width="25.68dp"
					android:layout_height="24.42dp" />

				<ImageView android:id="@+id/star_17"
					android:src="@drawable/star_17"
					android:contentDescription="star_17"
					 android:layout_marginStart="1064dp"
					android:layout_marginTop="672dp"
					android:layout_width="25.68dp"
					android:layout_height="24.42dp" />

				<ImageView android:id="@+id/star_11"
					android:src="@drawable/star_11"
					android:contentDescription="star_11"
					 android:layout_marginStart="716dp"
					android:layout_marginTop="672dp"
					android:layout_width="25.68dp"
					android:layout_height="24.42dp" />

				<ImageView android:id="@+id/star_12"
					android:src="@drawable/star_12"
					android:contentDescription="star_12"
					 android:layout_marginStart="743dp"
					android:layout_marginTop="672dp"
					android:layout_width="25.68dp"
					android:layout_height="24.42dp" />

				<ImageView android:id="@+id/star_14"
					android:src="@drawable/star_14"
					android:contentDescription="star_14"
					 android:layout_marginStart="797dp"
					android:layout_marginTop="672dp"
					android:layout_width="25.68dp"
					android:layout_height="24.42dp" />

				<ImageView android:id="@+id/star_15"
					android:src="@drawable/star_15"
					android:contentDescription="star_15"
					 android:layout_marginStart="770dp"
					android:layout_marginTop="672dp"
					android:layout_width="25.68dp"
					android:layout_height="24.42dp" />

				<ImageView android:id="@+id/star_6"
					android:src="@drawable/star_6"
					android:contentDescription="star_6"
					 android:layout_marginStart="1023dp"
					android:layout_marginTop="421dp"
					android:layout_width="25.68dp"
					android:layout_height="24.42dp" />

				<ImageView android:id="@+id/star_7"
					android:src="@drawable/star_7"
					android:contentDescription="star_7"
					 android:layout_marginStart="1050dp"
					android:layout_marginTop="421dp"
					android:layout_width="25.68dp"
					android:layout_height="24.42dp" />

				<ImageView android:id="@+id/star_10"
					android:src="@drawable/star_10"
					android:contentDescription="star_10"
					 android:layout_marginStart="1077dp"
					android:layout_marginTop="421dp"
					android:layout_width="25.68dp"
					android:layout_height="24.42dp" />

				<ImageView android:id="@+id/untitled_design__8__1"
					android:src="@drawable/untitled_design__8__1"
					android:contentDescription="untitled_design__8__1"
					 android:layout_marginStart="130dp"
					android:layout_marginTop="259dp"
					android:layout_width="398dp"
					android:layout_height="353dp" />

				<TextView android:id="@+id/loren_ipsum"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="50sp"
					android:textColor="@color/loren_ipsum_color"
					android:layout_marginLeft="139dp"
					android:layout_marginTop="628dp"
					android:layout_width="375dp"
					android:layout_height="66dp"
					android:text="@string/loren_ipsum_string"
					 />


				<RelativeLayout android:id="@+id/align_justify"
					android:layout_marginTop="426.89dp"
					android:layout_marginStart="692.75dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__align_justify_ek1"
						android:background="@drawable/_bg__align_justify_ek1_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="25dp"
						android:layout_height="25dp" />

				</RelativeLayout>

				<ImageView android:id="@+id/vector"
					android:src="@drawable/vector"
					android:contentDescription="vector"
					 android:layout_marginStart="25dp"
					android:layout_marginTop="36dp"
					android:layout_width="19.44dp"
					android:layout_height="18.23dp" />

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>